# rum

./: Cargo.toml  LICENSE  README.md  allocators.md  cli.md  convsersion_table.ods  coroutine_mockup.txt  lib_notes.md  notes.md  rum-std-2024.md  rum_raw.md  rust-toolchain.toml  rustfmt.toml  scenario.md  structures.md  test.rs  test.rum  test_mod.rum  todo.md  todo_arrays.md
crates/allocator/bit_record_allocator/: test.rs
crates/cli/: Cargo.toml  bin.rs
crates/common/: Cargo.toml  lib.rs
crates/common/container/: mod.rs  stack_vec.rs
crates/common/container/test/: mod.rs
crates/compiler/: Cargo.toml  _interpreter.rs  basic_block_compiler.rs  bin.rs  bitfield.rs  compiler.rs  elf_link.rs  finalizer.rs  interpreter.rs  ir_compiler.rs  lib.rs  linker.rs  optimizer.rs  solver.rs  test.rs
crates/compiler/linker/: mod.rs
crates/compiler/targets/: mod.rs  reg.rs
crates/compiler/targets/x86/: compiler.rs  mod.rs  x86_binary_writer.rs  x86_binary_writer_old.rs.temp  x86_compiler.rs  x86_encoder.rs  x86_eval.rs  x86_instructions.rs  x86_types.rs
crates/compiler/types/: binary.rs  const_val.rs  constraints.rs  core.rs  database.rs  interpreted_value.rs  ir_ops.rs  lang_types.rs  mod.rs  node.rs  register_set.rs  type_var.rs
crates/concurrent/: containers.rs  pool.rs
crates/container/: lib.rs  stack_vec.rs
crates/container/test/: mod.rs
crates/core/: Cargo.toml  build.rs  lib.rs
crates/core/grammar/: core.radlr
crates/core/parser/: ast.rs  mod.rs  parser.rs
crates/language/: Cargo.toml  bitfield.rs  build.rs  lib.rs
crates/language/compiler/: mod.rs
crates/language/compiler/interpreter/: mod.rs  runner.rs  types.rs
crates/language/compiler/interpreter/ll/: bitfield.rs  ir_block_compiler.rs  ir_block_optimizer.rs  ir_const_val.rs  ir_types.rs  mod.rs  (+9 more)
crates/language/compiler/optimizer_parser/: ast.rs  mod.rs  parser.rs
crates/language/compiler/script_parser/: ast.rs  mod.rs  parser.rs
crates/language/grammar/: low_level.radlr  op_optimize.radlr  raw.radlr  rum_lang.radlr
crates/language/grammar/common/: primitive.radlr
crates/language/grammar/raw/: expression.radlr  function.radlr  raw.radlr  routine.radlr  statement.radlr  struct.radlr  type.radlr
crates/language/ir/: ir_block_annotations.rs  ir_build_module.rs  ir_builder.rs  ir_const_val.rs  ir_context.rs  ir_graph.rs  ir_optimizer_induction.rs  ir_register_allocator.rs  ir_state_machine.rs  ir_to_register_machine.rs  ir_type_sys.rs  ir_types.rs  mod.rs
crates/language/ir/ir_build_module/: test.rs
crates/language/ir/ir_register_allocator/: test.rs
crates/language/parser/: mod.rs
crates/language/parser/script_parser/: mod.rs
crates/language/test_scripts/: run_ll_script.lang
crates/language/test_scripts/core/: utf8.rum
crates/language/types/: base.rs  bitsize.rs  complex.rs  const_val.rs  mod.rs  primitive.rs
crates/language/x86/: mod.rs  x86_compiler.rs  x86_encoder.rs  x86_instructions.rs  x86_types.rs
crates/rum_lang/: Cargo.toml
crates/rum_lang/grammar/: build.rs
crates/rum_lang/grammar/common/: comment.radlr  primitive.radlr
crates/rum_lang/grammar/raw/: annotation.radlr  complex.radlr  expression.radlr  module.radlr  raw.radlr  resource_locator.radlr  routine.radlr  statement.radlr  type.radlr
crates/rum_lang/src/: bin.rs  lib.rs
crates/rum_lang/src/container/: mod.rs
crates/rum_lang/src/ir/: db.rs  ir_block.rs  ir_builder.rs  ir_rvsdg.rs  types.rs
crates/rum_lang/src/ir/ir_rvsdg/: lower.rs  solve_pipeline.rs  test.rs  type_check.rs
crates/rum_lang/src/ir_interpreter/: interpreter.rs  mod.rs  value.rs
crates/rum_lang/src/parser/script_parser/: mod.rs
crates/rum_lang/src/types/: bitsize.rs  mod.rs  reg.rs
crates/rum_lang/src/types/type_context/: test.rs
crates/rum_lang/src/vm/: mod.rs
crates/rum_lang/src/x86/: mod.rs  x86_encoder.rs  x86_types.rs
crates/test/: Cargo.toml  test.rs
crates/wasm/: Cargo.toml  bin.rs
docs/: goals-plus-look-and-feel.md  idea.md  rum-std-2024.md  todo.md
grammar/: build.rs  primitive.radlr  raw.radlr  raw_iter.radlr
grammar/common/: primitive.radlr
grammar/raw/: annotation.radlr  complex.radlr  expression.radlr  module.radlr  raw.radlr  routine.radlr  statement.radlr  struct.radlr  type.radlr
src/: bin.rs  error.rs  lib.rs
src/compiler/: mod.rs  test.rs
src/container/: buffer.rs  circular_buffer.rs  mod.rs  stack_vec.rs
src/container/test/: mod.rs
src/ir/: db.rs  ir_block.rs  ir_block_annotations.rs  ir_block_optimizer.rs  ir_build_module.rs  ir_builder.rs  ir_context.rs  ir_graph.rs  ir_lowering.rs  ir_optimizer_induction.rs  ir_register_allocator.rs  ir_register_allocator_ssa.rs  ir_rvsdg.rs  ir_type_analysis.rs  mod.rs  types.rs
src/ir/ir_build_module/: test.rs  test_str.rs
src/ir/ir_builder/: test.rs
src/ir/ir_register_allocator/: test.rs
src/ir/ir_rvsdg/: lower.rs  solve_pipeline.rs  test.rs  type_check.rs  type_solve.rs  type_solver.rs
src/ir_interpreter/: blame.rs  interpreter.rs  mod.rs  value.rs
src/istring/: mod.rs
src/istring/test/: mod.rs
src/linker/: mod.rs
src/parser/script_parser/: mod.rs
src/types/: base.rs  bitsize.rs  complex.rs  const_val.rs  mod.rs  primitive.rs  reg.rs  ty.rs  type_context.rs  type_database.rs
src/x86/: mod.rs  x86_compiler.rs  x86_encoder.rs  x86_eval.rs  x86_instructions.rs  x86_types.rs
test/: allocator.rum  array.rum  error_missing_struct_member.rum  hello_world.rum  loop.rum  main_test.rum  struct.rum  struct_metadata.rum  test.rum  trivial.rum
test/examples_scripts/: index_definition.note  paint_program.lang  temp.lang
test/examples_scripts/core/: utf8.rum
test_scripts/: write_to_simple_table.lang
(+23 files in other folders)
