[workspace]

members = [
    "./crates/istring",
    "./crates/hash",
    "./crates/buffer",
    "./crates/allocator",
    "./crates/profile",
    "./crates/profile_proc_macro",
    "./crates/concurrent",
    "./crates/container",
    "./crates/math",
    "./crates/log",
    "./crates/window",
    "./crates/language",
    "./crates/rum_cli"
]

exclude = [
  "test"
]

resolver = "2"

[profile.dev]
debug = 2

[profile.release]
opt-level=3
debug = 0
