[package]
name = "rum_lang"
version = "0.0.0"
edition = "2021"

build = "./grammar/build.rs"


[[bin]]
name = "rum"
path = "./src/bin.rs"

[lib]
path = "./src/lib.rs"

[dependencies.radlr_rust_runtime]
path = "../lib_radlr/crates/radlr-rust-runtime"

[build_dependencies.radlr_build]
path = "../lib_radlr/crates/radlr-build"

[dependencies]
libc = "0.2.154"
num-traits        = "0.2.17"
once_cell = "1.19.0"

[dependencies.iced-x86]
version = "1.21.0"
default-features = false
# See below for all features
features = ["std", "decoder", "masm", "code_asm"]
