[workspace]

members = [
  "./crates/compiler",
  "./crates/core",
  "./crates/common",
  "./crates/rum_lang",
  "./crates/cli",
  "./crates/test",
]

default-members = ["./crates/cli"]

resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Anthony Weathersby"]
edition = "2021"

[profile.dev]
debug = 2

[profile.release]
opt-level=3
debug = 0

[profile.release-with-debug]
inherits = "release"
debug = true

[workspace.dependencies.radlr_rust_runtime]
git = "https://github.com/acweathersby/radlr"

[workspace.dependencies.radlr_build]
git = "https://github.com/acweathersby/radlr"