[package]
name = "rum_common"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
path = "./lib.rs"

[dependencies.radlr_rust_runtime]
workspace = true

[build-dependencies.radlr_build]
workspace = true

[dependencies]
libc = "0.2.154"
num-traits        = "0.2.17"
once_cell         = "1.19.0"

[dependencies.iced-x86]
version = "1.21.0"
default-features = false
# See below for all features
features = ["std", "decoder", "masm", "code_asm"]
