[package]
name = "rum_compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "rum"
path = "./bin.rs"

[lib]
path = "./lib.rs"

[dependencies]
core_lang         = { path="../core" }
libc = "0.2.154"
rum_common        = { path="../common" }
rum_lang          = { path="../rum_lang" }
num-traits        = "0.2.17"

[dependencies.radlr_rust_runtime]
workspace = true

[dependencies.iced-x86]
version = "1.21.0"
default-features = false
# See below for all features
features = ["std", "decoder", "masm", "code_asm"]
